[package]
name = "smallset"
version = "0.1.0"
authors = ["Chris Fallin <cfallin@c1f.net>"]
description = "An unordered set of elements optimized for small sizes"
repository = "https://github.com/cfallin/rust-smallset"
documentation = "https://cfallin.github.io/rust-smallset/smallset/"
license = "MIT"

[dependencies]
smallvec = "0.1"
